SERVER-18796: sh.status() show 'dropped:false' colls again

Specifically:

* printShardingStatus()/sh.status() show collections with missing 'dropped' field
* Don't omit 'dropped:false' in config.collections
* Add jstest for basic validation of printShardingStatus() output